--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <header>
+        <h1>AGRO BUSINESS INDUSTRIES</h1>
         <nav>
            <ul class="menu">
                 <li><a href="#">acceuil</a></li>
@@ -20,11 +21,14 @@
            </form>
         </nav>
     </header>
-    <aside>
+    <section>
         <ul>
             <li><a href="#">à propos</a></li>
         </ul>
-    </aside>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+        Repellendus veritatis incidunt  laudantium quisquam non debitis sequi est eos dolorem
+         commodi, quia architecto vel reiciendis deserunt facilis veniam eveniet aperiam blanditiis.</p>
+    </section>
 <ul>
     <li><a href=""><img src="./photo/photo.jfif" width="200"></a></li>
 </ul>
@@ -41,6 +45,7 @@ In fugit enim consequatur hic dolore, numquam cumque eius suscipit nobis optio n
 src="https://www.youtube.com/watch?v=Hin8-nEFIuI&ab_channel=Adshare%5CChokasProduction">
    </iframe>
      </section>
+     
     <section>
         <ul>
             <li><a href="#">travail</a></li>
@@ -52,9 +57,11 @@ src="https://www.youtube.com/watch?v=Hin8-nEFIuI&ab_channel=Adshare%5CChokasProd
     </ul>
 </section>
     <section>
-        <ul>
-            <li><a href="#">contact</a></li>
-        </ul>
+       <form>
+        <label>number</label>
+        <input type="number" name="contact" value="1234567890">
+       </form>
     </section>
 </body>
+<footer>business industries</footer>
 </html>
